--- a/csfs-research/slideshow/global.css
+++ b/csfs-research/slideshow/global.css
@@ -20,7 +20,7 @@
   height: 10px;
   width: 10px;
   margin-right: 2px;
-  background-color: #bbb;
+  background-color: #aaa;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.5s ease;
