--- a/csfs-research/slideshow/global.css
+++ b/csfs-research/slideshow/global.css
@@ -13,17 +13,22 @@
 }
 
 .entry-content .slideshow-dots {
-    text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 .entry-content .slideshow-dots .dot {
-  height: 10px;
-  width: 10px;
-  margin-right: 2px;
+  height: 15px;
+  width: 15px;
+  margin: 0 4px;
   background-color: #aaa;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.5s ease;
+}
+
+.entry-content .slideshow-dots .dot:hover { 
+    cursor: pointer; 
 }
 
 .entry-content .slideshow-dots .active {
